--- a/module-2-solution/index.html
+++ b/module-2-solution/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Module 2 Assginment</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Module 2 Assginment</title>
+	<link rel="stylesheet" href="css/styles.css">
+</head>
+
 <body>
-<h1> Hello World</h1>
+	<h1>American Sports</h1>
+
+	<div class="row">
+		<div class="section-lg section-md section-sm section"><div class="section-title section-title1">Football</div>
+			<section><p>American football consists of two opposing teams attempting to possess the "football" beyond the goal line. The goal lines are separated by 100 yards. Play is initiated with one team kicking the ball to the other team. The receiving team is on offense while the kicking team is on defense. And there you have a description of football.</p></section>
+		</div>
+		<div class="section-lg section-md section-sm section"><div class="section-title section-title2">Baseball</div>
+			<section><p>American football consists of two opposing teams attempting to possess the "football" beyond the goal line. The goal lines are separated by 100 yards. Play is initiated with one team kicking the ball to the other team. The receiving team is on offense while the kicking team is on defense. And there you have a description of football.</p></section>
+		</div>
+		<div class="section-lg section-md-bottom section-sm section"><div class="section-title section-title3">Basketball</div>
+			<section><p>American football consists of two opposing teams attempting to possess the "football" beyond the goal line. The goal lines are separated by 100 yards. Play is initiated with one team kicking the ball to the other team. The receiving team is on offense while the kicking team is on defense. And there you have a description of football.</p></section>
+		</div>
+	</div>
+
 </body>
